beast-new/mongo/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: mongodb
    release: beast
  name: mongodb
  namespace: beast
spec:
  podManagementPolicy: OrderedReady
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mongodb
      release: beast
  serviceName: mongodb
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mongodb
        release: beast
    spec:
      containers:
      - command:
        - sh
        - -c
        - |
          /bin/bash <<'EOF'
          mkdir /db/$(POD_ID)
          mongod --replSet replset --bind_ip_all --dbpath '/db/$(POD_ID)'
          EOF
        image: mongo
        imagePullPolicy: Always
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - -c
              - kill -15 `ps aux | grep '/usr/bin/java' | awk '{print $1}'`
        name: mongodb
        ports:
        - containerPort: 27017
          name: service
          protocol: TCP
        resources: {}
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /db
          name: beast
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - beast.com
        ip: 127.0.0.1
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: beast
        persistentVolumeClaim:
          claimName: beast
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
