beast-new/mongo/test1ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb
  namespace: beast
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongodb
            port:
              number: 27017
